8224109: Text spaced incorrectly by drawString under rotation with fractional metric

Reviewed-by: serb, kizune